--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Colot Generator</title>
+    <title>Random Color Generator</title>
 </head>
 <body>
+    <h1>Random Color Generator</h1>
     <div>
         <p id="display-hex"></p>
     </div>
