--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Color Generator</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <h1>Random Color Generator</h1>
-    <div>
-        <p id="display-hex"></p>
+    <div class="wrapper">
+        <h1>Random Color Generator</h1>
+
+        <p id="display-hex">Click to Generate Color</p>
+
+        
     </div>
     <script src="script/script.js"></script>
 </body>
