--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <p id="display-hex">Click to Generate Color</p>
 
-        
+        <button id="copy-btn">Copy Hex Code</button>
     </div>
     <script src="script/script.js"></script>
 </body>
