--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Color Generator</title>
     <link rel="stylesheet" href="style/style.css">
+    <link type="image/png" sizes="16x16" rel="icon" href="images/palette.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
         <h1>Random Color Generator</h1>
 
-        <p id="display-hex">Click to Generate Color</p>
+        <p id="display-hex">Hex Code: #EDAE49</p>
 
         <button id="copy-btn">Copy Hex Code</button>
     </div>
